# NEWCC

./: ACDqueue.cpp  ACDqueue.h  CMakeLists.txt  CalloutManager.cpp  CalloutManager.h  DNManager.cpp  DNManager.h  IVRmanager.cpp  IVRmanager.h  Makefile  README.en.md  README.md  Service.ini  WS_ApServer.cpp  WS_ApServer.h  database.conf  main.cpp  mydid.xml.back  process_event.cpp  process_event.h
base/inifile/: inifile.cpp  inifile.h
base/inifile/lib/: inifile.lib  inifiled.lib
base/jsoncpp/lib/: lib_json.lib  lib_jsond.lib
base/output/include/: basesock.h  timebase.h  xAtomicInt32.h  xAutoLock.h  xDemultiplexerSelect.h  xEMsgqueue.h  xEmutex.h  xEtcpclient.h  xEtcpserver.h  xEthreadpool.h  xEventDemultiplexer.h  xNetdata.h  xOntimerBase.h  xReactor.h  xReactorwithThread.h  xStringuil.h  xTaskqueue.h  xTimeuil.h  xbaseclass.h  xsema.h  xsmartPtr.h  xsync_queue.h  xsync_vector.h  xthreadPool.h  xthreadbase.h  xtimeheap.h
base/output/lib/windows/: libseabase.lib
common/: DBOperator.cpp  DBOperator.h  codeHelper.cpp  codeHelper.h  structdef.cpp  structdef.h
common/speech/: common.c  common.h  token.cpp  token.h  ttscurl.c  ttscurl.h
database/: dbPool.cpp  dbPool.h
database/config/: inirw.cpp  inirw.h
doc/: CloudCall Platform API_v2.2.doc  info  newinfo  ~$oudCall Platform API_v2.2.doc  太信智能呼叫中心产品需求文档.docx  控制中心功能列表(1).xlsx
esl/: esl.c  esl.h  esl_event.c  esl_event.h
mysqlcnn/: BUILDINFO.txt  main.cpp  test
mysqlcnn/include/jdbc/: mysql_connection.h
mysqlcnn/include/jdbc/cppconn/: version_info.h
mysqlcnn/lib64/: libcrypto.so.1.0.0  libssl.so.1.0.0
